tests/ui/cached_convert_without_key.rs
use cached::macros::cached;

#[cached(convert = r#"{ k }"#)]
fn my_fn(k: i32) -> i32 {
    k
}

fn main() {}
